--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gonzalo",
+  "name": "Entrega-3-proyecto-final",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
     "sass": "sass",
     "sass:watch": "sass --watch scss/main.scss  css/main.css"
   },
-  "author": "",
+  "author": "Gonzalo de la Iglesia",
   "license": "ISC",
   "dependencies": {
     "sass": "^1.54.0"
